backend/.k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nico-agent
  namespace: nico-agent-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nico-agent
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: nico-agent
    spec:
      containers:
        - name: nico-agent
          image: DOCKER_IMAGE
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
      restartPolicy: Always
